Change SqlServer to Sqlite

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-40ENEDT\\SQLEXPRESS;Database=ShoppingDotNetCore.Web.API.Db;Trusted_Connection=True"
+    "DefaultConnection": "Data Source=ShoppingDotNetCore.Web.API.db"
   },
   "Logging": {
     "LogLevel": {
